<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.burgos.juan.zafiroweb.fisiovidaplus.CuentaActivity"
    android:orientation="vertical"
    android:background="@drawable/fondo"
    >
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/lblRegistro"
        android:gravity="center"
        android:textSize="25sp"
        android:textColor="#800080"
        android:paddingBottom="20dp"
        />
    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        >
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txtCorreo"
            android:gravity="center"
            android:inputType="textEmailAddress"
            />
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/lblUsuario"
            android:text="@string/lblUsuario"
            android:gravity="center"
            android:textSize="22sp"
            android:textColor="#800080"
            android:paddingBottom="12dp"
            />
        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txtPassword"
            android:inputType="numberPassword"
            android:gravity="center"
            />
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/lblPassword"
            android:text="@string/lblPassword"
            android:gravity="center"
            android:textSize="22sp"
            android:textColor="#800080"
            android:paddingBottom="12dp"
            />
        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txtNombre"
            android:gravity="center"
            android:inputType="textCapSentences"
            />
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/lblNombre"
            android:text="@string/lblNombre"
            android:gravity="center"
            android:textSize="22sp"
            android:textColor="#800080"
            android:paddingBottom="12dp"
            />
        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txtFecNac"
            android:hint="@string/txtFecNac"
            android:gravity="center"
            android:inputType="datetime"
            />
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/lblFecNac"
            android:text="@string/lblFecNac"
            android:gravity="center"
            android:textSize="22sp"
            android:textColor="#800080"
            android:paddingBottom="12dp"
            />
        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/rbgGenero"
            android:paddingTop="15dp"
            android:layout_gravity="center"
            android:orientation="horizontal"
            >
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Masculino"
                android:id="@+id/rbMasculino"
                android:textColor="#808080"
                android:textSize="22sp"
                />
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Femenino"
                android:id="@+id/rbFemenino"
                android:textColor="#808080"
                android:textSize="22sp"
                />
        </RadioGroup>
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/lblGenero"
            android:text="@string/lblGenero"
            android:gravity="center"
            android:textSize="22sp"
            android:textColor="#800080"
            android:paddingBottom="12dp"
            />
        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txtEstatura"
            android:hint="@string/txtEstatura"
            android:gravity="center"
            android:inputType="numberDecimal"
            />
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/lblEstatura"
            android:text="@string/lblEstatura"
            android:gravity="center"
            android:textSize="22sp"
            android:textColor="#800080"
            android:paddingBottom="12dp"
            />
        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txtPeso"
            android:hint="@string/lblPesoHint"
            android:gravity="center"
            android:inputType="numberDecimal"
            />
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/lblPeso"
            android:text="@string/lblPeso"
            android:gravity="center"
            android:textSize="22sp"
            android:textColor="#800080"
            android:paddingBottom="12dp"
            />
    </LinearLayout>
    </ScrollView>
</LinearLayout>
