<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:background="@drawable/fondo"
    >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/logo1"
            android:paddingBottom="35dp"
            android:id="@+id/imgLogo"
            />
        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/txtCorreo"
            android:gravity="center"
            android:textSize="20sp"
            android:id="@+id/txtUsuario"
            android:inputType="textWebEmailAddress"
            />
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/lblCorreo"
            android:gravity="center"
            android:textSize="25sp"
            android:textColor="#800080"
            android:paddingBottom="15dp"
            />
        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/txtPass"
            android:gravity="center"
            android:textSize="20sp"
            android:inputType="numberPassword"
            android:id="@+id/txtPass"
            />
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/lblPass"
            android:gravity="center"
            android:textSize="25sp"
            android:textColor="#800080"
            android:paddingBottom="25dp"
            />

    </LinearLayout>

    <LinearLayout
        android:paddingTop="15dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnIniciar"
            android:textColor="#800080"
            android:layout_weight="1"
            android:onClick="onIniciar"
            />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnCrearCuenta"
            android:textColor="#800080"
            android:layout_weight="1"
            android:onClick="onCrearCuenta"
            />
    </LinearLayout>

</LinearLayout>
