<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:background="@drawable/fondo"
    tools:context="com.burgos.juan.zafiroweb.fisiovidaplus.GlucometriaActivity"
    >
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingBottom="25dp"
    >
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/lblValorGlucometria"
        android:text="@string/txtMenuGlucometria"
        android:gravity="center"
        android:textColor="#800080"
        android:textSize="25sp"
        android:paddingBottom="40sp"
        />

    <EditText
        android:id="@+id/txtGlucometria"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textSize="50sp"
        android:maxLength="3"
        android:gravity="center"
        android:inputType="number"
        android:textColor="#C0C0C0"
        android:hint="# mg/dL"
        />
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textColor="#800080"
        android:gravity="center"
        android:text="@string/lblValorGlucometria"
        android:textSize="25sp"
        />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >
        <Button
            android:id="@+id/btnOpGlucometria"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/txtGuardarOpGlucometria"
            android:textColor="#800080"
            android:onClick="onGuardarGlucometria"
            />
        <TextView
            android:paddingTop="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lblTitRecGlucometria"
            android:textColor="#228B22"
            android:textStyle="bold"
            android:textSize="15sp"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/lblRecGlucometria"
            android:id="@+id/lblRecGlucometria"
            />

    </LinearLayout>


</LinearLayout>
