<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:background="@drawable/fondo"
    tools:context="com.burgos.juan.zafiroweb.fisiovidaplus.PresionActivity"
    >

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/lblValorPresion"
        android:text="@string/txtMenuPresion"
        android:gravity="center"
        android:textColor="#800080"
        android:textSize="25sp"
        android:paddingBottom="40sp"
        />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
        <EditText
            android:id="@+id/txtSistolica"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textSize="60sp"
            android:maxLength="3"
            android:gravity="center"
            android:inputType="number"
            android:textColor="#C0C0C0"
            android:hint="120"
            />
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textColor="#800080"
            android:gravity="center"
            android:text="@string/txtValorSistolica"
            android:textSize="25sp"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="25dp"
        >
        <EditText
            android:id="@+id/txtDiastolica"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textSize="60sp"
            android:maxLength="3"
            android:gravity="center"
            android:inputType="number"
            android:textColor="#C0C0C0"
            android:hint="80"
            />
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textColor="#800080"
            android:gravity="center"
            android:text="@string/txtValorDiastolica"
            android:textSize="25sp"
            />
    </LinearLayout>

    <Button
        android:id="@+id/btnOpPresion"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/txtGuardarOpPresion"
        android:textColor="#800080"
        android:onClick="onGuardarPresion"
        />

</LinearLayout>
