<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:background="@drawable/fondo"
    tools:context="com.burgos.juan.zafiroweb.fisiovidaplus.ImcActivity"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="40dp"
        >
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/lblValorIMC"
            android:text="@string/txtMenuIMC"
            android:gravity="center"
            android:textColor="#800080"
            android:textSize="25sp"
            android:paddingBottom="40sp"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_gravity="center"
        >
        <TextView
            android:id="@+id/lblIMC"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textColor="#800080"
            android:maxLength="4"
            android:textStyle="bold"
            android:gravity="center"
            android:textSize="80sp"
            />
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textColor="#800080"
            android:gravity="center"
            android:text="@string/lblIMC"
            android:textSize="25sp"
            />
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btnCalcular"
            android:textColor="#800080"
            android:onClick="onCalcular"
            />
        <TextView
            android:id="@+id/lblresIMC"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textColor="#800080"
            android:textStyle="bold"
            />

    </LinearLayout>
</LinearLayout>
